[package]
name = "s_token"
version = "0.15.0"
authors = ["nam <nam.pv1805@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
semver = "1"
cosmwasm-schema = "1.1.2"
cw-utils="0.15.0"
cosmwasm-std = "1.1.2"
cosmwasm-storage = "1.1.2"
cw-storage-plus = "0.13.2"
cw2 = "0.15.0"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw20 = "0.15.0"

[dev-dependencies]
cw-multi-test = "0.15.0"
